fixed qi's image in part 3

--- a/hw_3/report/thrun_qi_hw_3.tex
+++ b/hw_3/report/thrun_qi_hw_3.tex
@@ -219,7 +219,7 @@ tabulated below:
 
 \begin{figure}[H]
     \centering
-    \includegraphics[height=8in]{../part_3/xiaohui/bitslice2.png}
+    \includegraphics[width=\linewidth]{../part_3/xiaohui/magicslice.png}
     \caption{\textbf{Design A:} Layout}
 \end{figure}
 
