--- a/hw_3/report/thrun_qi_hw_3.tex
+++ b/hw_3/report/thrun_qi_hw_3.tex
@@ -130,7 +130,7 @@ each mux. A schematic representation of this design is shown below.
     \caption{Gate Level Slice}
 \end{figure}
 
-An example circuit showing 4 slices changed together is shown below to
+An example circuit showing 4 slices chained together is shown below to
 illustrate the connections.
 
 \begin{figure}[H]
@@ -284,7 +284,7 @@ tabulated below:
 A comparison of delays obtained from hspice for both designs is tabulated
 below. From the results we can see that design B is significantly faster. Given
 this result, combined with the fact that the layout of design B lends itself to
-easier patterning, led us to choose design B as the design to move forward with.
+easier patterning, we chose design B as the design to move forward with.
 
 \vspace{0.25in}
 \begin{table}[H]
