resize chain image so it fits on the correct page

--- a/project/doc/progress_1/thrun_qi_progress_1.tex
+++ b/project/doc/progress_1/thrun_qi_progress_1.tex
@@ -217,7 +217,7 @@ implementing.
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=\linewidth]{../../logisim/chain.png}
+        \includegraphics[width=0.75\linewidth]{../../logisim/chain.png}
         \caption{3 INTRANEX Chain}
     \end{figure}
 
