[doc] make vhdl gates in progress 1 no delay versions

--- a/project/doc/progress_1/body.tex
+++ b/project/doc/progress_1/body.tex
@@ -282,10 +282,10 @@ implementing.
         \end{figure}
     \newpage
     \subsection{Gates}
-        \lstinputlisting[caption=AOI21X1 VHDL Module]{../../vhdl/aoi21x1.vhd}
-        \lstinputlisting[caption=DFFPOSX1 VHDL Module]{../../vhdl/dffposx1.vhd}
-        \lstinputlisting[caption=INVX1 VHDL Module]{../../vhdl/invx1.vhd}
-        \lstinputlisting[caption=MUX2X1 VHDL Module]{../../vhdl/mux2x1.vhd}
+        \lstinputlisting[caption=AOI21X1 VHDL Module]{../../vhdl/aoi21x1.vhd.nodelay}
+        \lstinputlisting[caption=DFFPOSX1 VHDL Module]{../../vhdl/dffposx1.vhd.nodelay}
+        \lstinputlisting[caption=INVX1 VHDL Module]{../../vhdl/invx1.vhd.nodelay}
+        \lstinputlisting[caption=MUX2X1 VHDL Module]{../../vhdl/mux2x1.vhd.nodelay}
 
 \section{VHDL Test Benches}
     \subsection{Top Level Functional}
